Docs: 카테고리 관련 수정

--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/pdxvhdx"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/yooniicode/"
 
 # Site Footer
 footer:
