--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@
 
   # main links
 main:
-  - title: "develop"
+  - title: "Develop"
     url: /backend/
   - title: "Categories"
     url: /categories/
