--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ title                    : "YooniCode"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Yoonji Lee"
-description              : "An amazing website."
+description              : "A blog about programming, technology, and life. ( •̀ ω •́ )y"
 url                      : "https://yooniicode.github.io"
 baseurl                  : ""
 repository               : "yooniicode/yooniicode.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs              : # true, false (default)
+breadcrumbs              : true
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
@@ -68,7 +68,7 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
+search                   : true
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
 lunr:
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Yoonji Lee"
   avatar           : "/assets/images/nini.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "이게 왜 되지"
   location         : "Seoul, South Korea"
   email            :
   links:
@@ -232,7 +232,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Seoul
 
 
 # Pagination with jekyll-paginate
@@ -325,7 +325,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
   
